# agda-compiler

./: .gitignore  CHANGELOG.md  agda-compiler.cabal  flake.nix
reference-implementation/: Internal.agda
reference-implementation/Core/: Typed.agda  Untyped.agda
reference-implementation/Monadic/: Untyped.agda
