cabal-version:      2.4
name:               agda-compiler
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Martin Fredin
maintainer:         fredin.martin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common language
    ghc-options: 
        -W

    default-extensions:
        BlockArguments
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        LambdaCase
        LexicalNegation
        MultiParamTypeClasses
        MultiWayIf
        NoStarIsType
        OverloadedRecordDot
        NamedFieldPuns
        PatternSynonyms
        RankNTypes
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeOperators
        TypeSynonymInstances

library
    import:           language
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.13.0.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable agda-compiler
    import:           language
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        , base >= 4.13.0.0
        , agda-compiler

    hs-source-dirs:   app
    default-language: Haskell2010
